[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/entity_modules/visuals.gd" type="Script" id=1]
[ext_resource path="res://scripts/entity.gd" type="Script" id=2]
[ext_resource path="res://scripts/entity_modules/knobs.gd" type="Script" id=3]
[ext_resource path="res://scripts/entity_modules/number.gd" type="Script" id=4]
[ext_resource path="res://scripts/entity_modules/interactor.gd" type="Script" id=5]
[ext_resource path="res://scripts/entity_modules/executor.gd" type="Script" id=6]
[ext_resource path="res://assets/fonts/entity_number_font.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/textures/quad_sprites.png" type="Texture" id=8]
[ext_resource path="res://scripts/entity_modules/action_hint.gd" type="Script" id=9]
[ext_resource path="res://scripts/entity_modules/knob_holder.gd" type="Script" id=10]
[ext_resource path="res://assets/textures/support_wizard.png" type="Texture" id=11]

[sub_resource type="Animation" id=1]
resource_name = "HintShower"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -0.5, 0, 0 ), Vector3( 0.25, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite3D:opacity")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0, 0.0 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -1, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite3D:opacity")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "SupportSprite"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 1.2, 1.2, 1.2 ) ]
}

[node name="Entity" type="Spatial" groups=["Entities"]]
script = ExtResource( 2 )

[node name="Visuals" type="Spatial" parent="."]
transform = Transform( 0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 0, 0 )
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="Visuals"]

[node name="ActionHint" type="Spatial" parent="Visuals"]
transform = Transform( 1.33333, 0, 0, 0, 1.33333, 0, 0, 0, 1.33333, 1.383, 0.1, 0 )
script = ExtResource( 9 )

[node name="Sprite3D" type="Sprite3D" parent="Visuals/ActionHint"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -1, 0, 0 )
texture = ExtResource( 8 )
hframes = 8
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Visuals/ActionHint"]
autoplay = "HintShower"
anims/HintShower = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Support" type="Spatial" parent="Visuals"]
transform = Transform( 1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 0, 0, 0 )

[node name="Sprite3D" type="Sprite3D" parent="Visuals/Support"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.025866, 0 )
texture = ExtResource( 11 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Visuals/Support"]
autoplay = "SupportSprite"
anims/RESET = SubResource( 3 )
anims/SupportSprite = SubResource( 4 )

[node name="Knobs" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="Knobs"]
one_shot = true

[node name="FakeTween" type="Tween" parent="Knobs"]

[node name="Number" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Label" type="Label" parent="Number"]
visible = false
margin_left = -22.379
margin_top = -16.718
margin_right = 21.621
margin_bottom = 14.282
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 7 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KnobHolder" type="Node" parent="."]
script = ExtResource( 10 )

[node name="Interactor" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Executor" type="Node" parent="."]
script = ExtResource( 6 )

[connection signal="tween_completed" from="Visuals/Tween" to="Visuals" method="_on_Tween_tween_completed"]
[connection signal="timeout" from="Knobs/Timer" to="Knobs" method="_on_Timer_timeout"]
[connection signal="tween_completed" from="Knobs/FakeTween" to="Knobs" method="_on_FakeTween_tween_completed"]
